overflow fix

--- a/root/static/default.css
+++ b/root/static/default.css
@@ -17,10 +17,6 @@ html {
   position: relative;
 }
 
-.main-content {
-  overflow: hidden;
-}
-
 .app-bar {
   position: absolute;
 }
